# home_work_29

./: README.md  manage.py  pyproject.toml
ads/: models.py
ads/migrations/: 0001_initial.py  0002_remove_ad_address.py  0003_alter_ad_author.py
ads/serializers/: __init__.py
ads/urls/: category.py
ads/views/: __init__.py
ads/views/ad/: viewset.py
home_work_29/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
users/serializers/: users.py
users/urls/: user.py
users/views/users/: view.py
